--- a/TechDaysOnePageApp/Views/Shared/_Layout.cshtml
+++ b/TechDaysOnePageApp/Views/Shared/_Layout.cshtml
@@ -4,10 +4,16 @@
         <meta charset="utf-8" />
         <title>@ViewBag.Title - My ASP.NET MVC Application</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <link href="@System.Web.Optimization.BundleTable.Bundles.ResolveBundleUrl("~/Content/css")" rel="stylesheet" type="text/css" />
-        <link href="@System.Web.Optimization.BundleTable.Bundles.ResolveBundleUrl("~/Content/themes/base/css")" rel="stylesheet" type="text/css" />
-        <script src="@System.Web.Optimization.BundleTable.Bundles.ResolveBundleUrl("~/Scripts/js")"></script>
+        <link href="~/Content/Site.css" rel="Stylesheet" type="text/css" />
+        <script src="~/Scripts/Lib/jquery-1.7.1.js" type="text/javascript"></script>
+        <script src="~/Scripts/Lib/upshot.js" type="text/javascript"></script>
+        <script src="~/Scripts/Lib/knockout.js" type="text/javascript"></script>
+        <script src="~/Scripts/Lib/nav.js" type="text/javascript"></script>
+        <script src="~/Scripts/Lib/native.history.js" type="text/javascript"></script>
+        <script src="~/Scripts/Lib/upshot.compat.knockout.js" type="text/javascript"></script>
+        <script src="~/Scripts/Lib/upshot.knockout.extensions.js" type="text/javascript"></script>
         <meta name="viewport" content="width=device-width" />
+        @RenderSection("head", required: false)
     </head>
     <body>
         <header>
@@ -17,7 +23,7 @@
                 </div>
                 <div class="float-right">
                     <section id="login">
-                        @Html.Partial("_LoginPartial")
+                        
                     </section>
                     <nav>
                         <ul id="menu">
@@ -39,12 +45,6 @@
             <div class="content-wrapper">
                 <div class="float-left">
                     <p>&copy; @DateTime.Now.Year - My ASP.NET MVC Application</p>
-                </div>
-                <div class="float-right">
-                    <ul id="social">
-                        <li><a href="http://facebook.com" class="facebook">Facebook</a></li>
-                        <li><a href="http://twitter.com" class="twitter">Twitter</a></li>
-                    </ul>
                 </div>
             </div>
         </footer>
